src/test/ui/issues/10000-19999/issue-15034.nll.stderr
error[E0621]: explicit lifetime required in the type of `lexer`
  --> $DIR/issue-15034.rs:17:9
   |
LL |     pub fn new(lexer: &'a mut Lexer) -> Parser<'a> {
   |                       ------------- help: add explicit lifetime `'a` to the type of `lexer`: `&'a mut Lexer<'a>`
LL |         Parser { lexer: lexer }
   |         ^^^^^^^^^^^^^^^^^^^^^^^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
